--- a/styles/inline-spoilers-default.css
+++ b/styles/inline-spoilers-default.css
@@ -8,9 +8,8 @@ div.spoiler-wrap {
     border-left-width: 2px;
     clear: both;
     display: block;
-    margin: 6px auto;
+    margin: 6px 0;
     padding: 0;
-    width: 95%;
 }
 
 div.spoiler-head {
@@ -25,11 +24,17 @@ div.spoiler-head {
 }
 
 div.spoiler-head.collapsed {
-    background: url(../icons/plus.gif) no-repeat left center;
+    background: url(data:image/gif;base64,R0lGODlhCQAJAMQfAIqZyoGSxv3+/trl84CQxYCRxn6PxMXQ7efq9H+Pwtnk8oKTxoCQxKy44QAAANvl9rvG6fD5/o2by4GRxvb8//v9//7+/ubw+v39/ouayoKSxoOTx/7+/wwMDP///////yH5BAEAAB8ALAAAAAAJAAkAAAU84AdoGkNmX4Z4HldRirSxXMdF1zK7nXU9mk2t4+h0BIlNhWPpYTCBDQXXwRwggczgJ8BAGhLRZGIoEFAhADs=) no-repeat left center;
 }
 
 div.spoiler-head.expanded {
-    background: url(../icons/minus.gif) no-repeat left center;
+    background: url(data:image/gif;base64,R0lGODlhCQAJAMQeAOLt+ff8//z+/4CRxo2by7vF6a254X6PxICQw87a74CQxuXo84CQxM/b7/H6/v7+/oGRxouayoGSxv7+/8LN7IqZyv7//4KSxur0/MrV74OTx9Ld8trl9gwMDP///wAAACH5BAEAAB4ALAAAAAAJAAkAAAU4oFcpwzFAkWgUVLZxCQGxLgdgGtS+t6NJmY5QOEFcNo/kZGLRXGwYR0DQjDSiU8uCIJJIGJdLKgQAOw==) no-repeat left center;
+}
+
+div.spoiler-head.collapsed.no-icon, div.spoiler-head.expanded.no-icon {
+    background: none;
+    cursor: auto;
+    padding: 0 6px 0 6px;
 }
 
 div.spoiler-body {
@@ -38,8 +43,12 @@ div.spoiler-body {
     padding: 2px 6px;
 }
 
-div.spoiler-body > p, div.spoiler-body > pre {
-    margin: 0 0 0px;
+p.wp-block-inline-spoilers-block {
+    display: none;
+}
+
+div.spoiler-body > pre {
+    margin: 0;
 }
 
 div.spoiler-body > ul {
